# livespec-driver-codex

./: .gitignore  .livespec.jsonc  .mise.toml  AGENTS.md  CHANGELOG.md  README.md  justfile  lefthook.yml  pyproject.toml  release-please-config.json
.agents/plugins/: marketplace.json
.beads/: config.yaml
.claude/: settings.json
.github/scripts/: export-ci-telemetry.sh
.github/workflows/: auto-enable-merge.yml  bump-pin-from-dispatch.yml  ci.yml  pin-freshness.yml  release-dispatch.yml  release-park.yml  release-please.yml
SPECIFICATION/: contracts.md  scenarios.md
SPECIFICATION/history/: README.md
SPECIFICATION/history/v001/: constraints.md  contracts.md  non-functional-requirements.md  spec.md
SPECIFICATION/history/v001/proposed_changes/: README.md
SPECIFICATION/history/v002/: README.md  contracts.md  non-functional-requirements.md  spec.md
SPECIFICATION/history/v002/proposed_changes/: co9h-codex-auto-memory-guard-revision.md  co9h-codex-auto-memory-guard.md
SPECIFICATION/history/v003/: contracts.md  non-functional-requirements.md  spec.md
SPECIFICATION/history/v003/proposed_changes/: out-of-band-edit-2026-06-27t03-05-04z-revision.md  out-of-band-edit-2026-06-27t03-05-04z.md
SPECIFICATION/history/v004/: non-functional-requirements.md  scenarios.md  spec.md
SPECIFICATION/history/v004/proposed_changes/: orchestrate-to-drive-codex-picker-refs-revision.md  orchestrate-to-drive-codex-picker-refs.md
SPECIFICATION/history/v005/: contracts.md
SPECIFICATION/history/v005/proposed_changes/: codex-background-memory-audit-hook-revision.md  codex-background-memory-audit-hook.md
SPECIFICATION/history/v006/: contracts.md
SPECIFICATION/history/v006/proposed_changes/: tmux-default-socket-guard-revision.md  tmux-default-socket-guard.md
SPECIFICATION/proposed_changes/: README.md
_vendor/: __init__.py
_vendor/returns/: __init__.py  io.py  result.py
dev-tooling/: check_plugin_structure.py  git-hook-wrapper.sh
livespec/.codex-plugin/: plugin.json
livespec/hooks/: _footgun_primary_checkout.py  _footgun_shell.py  _footgun_tmux.py  _result.py  block_auto_memory.py  codex_background_memory_audit.py  hooks.json  livespec_footgun_guard.py  no_shadow_ledger.py
livespec/skills/critique/: SKILL.md
livespec/skills/doctor/: SKILL.md
livespec/skills/help/: SKILL.md
livespec/skills/next/: SKILL.md
livespec/skills/propose-change/: SKILL.md
livespec/skills/prune-history/: SKILL.md
livespec/skills/revise/: SKILL.md
livespec/skills/seed/: SKILL.md
plan/work-item-state-machine/: handoff.md
tests/: heading-coverage.json
tests/e2e-cli/: CLAUDE.md  __init__.py  conftest.py  test_cli_e2e.py  test_codex_skill_picker.py
tests/e2e-cli/fixtures/critique/: expected_files.txt  prompt.md
tests/e2e-cli/fixtures/doctor/: expected_files.txt  prompt.md
tests/e2e-cli/fixtures/help/: expected_files.txt  prompt.md
tests/e2e-cli/fixtures/next/: expected_files.txt  prompt.md
tests/e2e-cli/fixtures/propose-change/: expected_files.txt  prompt.md
tests/e2e-cli/fixtures/prune-history/: expected_files.txt  prompt.md
tests/e2e-cli/fixtures/revise/: expected_files.txt  prompt.md
tests/e2e-cli/fixtures/seed/: expected_files.txt  prompt.md
tests/hooks/: test_block_auto_memory.py  test_codex_background_memory_audit.py  test_footgun_primary_checkout.py  test_footgun_shell.py  test_footgun_tmux.py  test_hook_main_contract.py  test_livespec_footgun_guard.py  test_no_shadow_ledger.py  test_rop_policy.py  test_shipped_hooks_install_shape.py
