# pyproject.toml — livespec-driver-codex dev tooling configuration.
#
# Family conventions scaled to this repo's content: the only Python
# here is the repo-local structural check (stdlib-only), the
# plugin-shipped Codex footgun guard (stdlib-only), and the test suite
# (the hook unit tests + the e2e-cli harness consumer). NO
# [build-system] section: this repo is NOT a published PyPI package; it
# ships via Codex plugin bundling.

[project]
name = "livespec-driver-codex"
version = "0.0.0"
description = "Codex Driver for livespec — thin livespec:* SKILL.md bindings"
requires-python = ">=3.10.16"
authors = [
    { name = "Chad Woolley", email = "thewoolleyman@gmail.com" },
]

# Per the livespec convention: NO [project.dependencies] table — the
# plugin bundle carries no third-party runtime Python (the footgun
# guard is stdlib-only); end users install nothing.

[dependency-groups]
# Every Python dev tool is uv-managed via this table (resolved into
# uv.lock; installed into a project-local .venv via
# `uv sync --all-groups`). Mise pins only the non-Python binaries in
# .mise.toml.
dev = [
    "ruff==0.8.6",
    "pyright==1.1.391",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "livespec-dev-tooling",
]

# livespec-dev-tooling is consumed from the github.com sibling-library
# repo via uv git source per
# livespec/SPECIFICATION/contracts.md §"Shared code sync — livespec-dev-tooling"
# (this repo consumes only its `testing.cli_e2e` harness + the
# heading_coverage / green_token checks).
[tool.uv.sources]
livespec-dev-tooling = { git = "https://github.com/thewoolleyman/livespec-dev-tooling.git", tag = "v0.53.2" }

# ---------------------------------------------------------------------------
# Ruff — sole linter + formatter. Rule set mirrors the family baseline
# (livespec/pyproject.toml [tool.ruff]) minus the product-code-only
# categories that have no surface in a tests-plus-checks repo.
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
# The plugin-shipped Codex hook script (livespec/hooks/) is excluded from
# ruff exactly as the Claude Driver excludes its `.claude/hooks/**` scripts:
# a PreToolUse guard's protocol REQUIRES writing its decision JSON to stdout
# (a `print`, which T201 bans), and the guard's behavior is covered by the
# subprocess unit tests in tests/hooks/ rather than by the product-code lint
# rule set. dev-tooling/ and tests/ remain fully linted.
extend-exclude = ["livespec/hooks/**", "**/__pycache__/**"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "BLE",   # flake8-blind-except
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "C90",   # mccabe complexity
    "N",     # pep8-naming
    "RUF",   # ruff-specific
    "PTH",   # flake8-use-pathlib
    "PIE",   # flake8-pie
    "TID",   # flake8-tidy-imports
    "ERA",   # eradicate
    "ARG",   # flake8-unused-arguments
    "PT",    # flake8-pytest-style
    "ISC",   # flake8-implicit-str-concat
    "T20",   # flake8-print — bans print/pprint outside the check's stderr writes
]
ignore = [
    "ISC001",  # implicit-str-concat on one line; conflicts with the formatter
]

# The CLI end-to-end test directory is named `tests/e2e-cli/` by
# convention (livespec/SPECIFICATION/contracts.md §"CLI end-to-end
# harness contract" mandates a `tests/e2e-cli/` directory). The hyphen
# is not a valid Python module-name character, so N999 is exempted for
# that tree (it is never imported as a package by product code).
[tool.ruff.lint.per-file-ignores]
"tests/e2e-cli/**.py" = ["N999"]

# ---------------------------------------------------------------------------
# Pyright — the `check-types` tool-backed gate (fixed fleet policy: every
# consumer wires check-lint / check-format / check-types / check-coverage,
# enforced by check-tool-backed-check-completeness). Scoped to the product
# hook code under livespec/hooks/ (the only first-party product .py here),
# mirroring the producer's package-only include. The hooks run as scripts
# from their own directory, so their bare sibling imports
# (`from _footgun_shell import ...`, `from _footgun_primary_checkout import
# ...`) resolve at runtime via that on-disk dir being on sys.path; a runtime
# shim pyright does not execute. extraPaths makes pyright resolve those
# sibling imports against livespec/hooks/ WITHOUT a reportMissingImports (all
# first-party stdlib-only modules, no stubs needed).
[tool.pyright]
include = ["livespec/hooks"]
ignore = ["livespec/hooks/no_shadow_ledger.py"]
reportUnusedCallResult = "error"
exclude = ["**/__pycache__/**"]
extraPaths = ["livespec/hooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "mock_only: skipped under LIVESPEC_E2E_HARNESS=real per the CLI e2e harness contract",
    "real_only: skipped outside LIVESPEC_E2E_HARNESS=real (drives the live codex CLI)",
]

# `[tool.livespec_dev_tooling]` — this binding repo's dev-tooling layout
# config. IMPORTANT (the empty-baseline flip): the MOMENT any key exists in
# this block, livespec_dev_tooling.config.load_config STOPS falling back to
# the livespec-core historical layout, and every OMITTED role key reverts to
# an EMPTY baseline. This block already existed (carrying `scenario_tiers`),
# so the source-tree role keys were silently at the empty baseline — which
# made `commit_pairs_source_and_test` a NO-OP here: with
# `source_tree_prefixes = ()`, `path.startswith(())` is always False, so the
# "every source-touching commit also touches tests/" gate flagged nothing
# (work-item livespec-h3e7). The keys below name THIS repo's real source
# surface so the gate actually bites.
#
# fleet-check-coverage (livespec epic livespec-i5ebqd): this repo now ALSO
# wires the applies-to-all structural COVERAGE checks (justfile + ci.yml:
# check-all-declared, check-file-lloc, check-keyword-only-args,
# check-no-write-direct, check-partition-completeness, and the rest). Those
# checks do NOT read the heavy `source_trees`-family role keys for their
# universe — they derive it from the root-anchored git index
# (`resolve_check_universe` = `git ls-files '*.py'` minus `_vendor/`,
# `tests_tree_prefix`, `templates/`, and `@generated`). So the shipped hook
# `.py` under livespec/hooks/ ARE the universe — the four hooks.json entry
# points plus the sibling modules they import (`_footgun_shell`,
# `_footgun_primary_checkout`, `_result`), all of which must live INSIDE the
# packaged `livespec/` subtree because nothing above it ships. (The repo-root
# `_vendor/` tree the resolver excludes is gone: the hooks that reached out to
# it failed open in the install cache, so its railway shim moved to the
# sibling `livespec/hooks/_result.py`.) The Config role keys these
# newly-wired checks actually consult here are only:
#   - `source_tree_prefixes` — the `partition_completeness` broad-role claim
#     for the hooks (also the `commit_pairs` co-staging surface);
#   - `supervisor_entry_files` — the `no_write_direct` file-scope exemption
#     for the two Stop/PreToolUse hooks that own a documented stdout contract
#     (see that key's comment below);
#   - `file_lloc_hard_gate` — the `file_lloc` Phase-2 hard-gate arming flag,
#     now SET (see the armed-flip note below).
# The remaining heavy product-tree role keys (`source_trees`, `io_trees`,
# etc.) stay deliberately OMITTED: naming a tree this repo lacks would
# mislead readers and add a config key that guards nothing. With
# `source_trees` empty, the delta-WARN classifier in each applies-to-all
# check treats all first-party hook `.py` as newly-covered, so the other
# twelve coverage checks stay Phase-0 WARN-only (exit 0); ONLY `file_lloc`
# is armed to the hard gate for this repo via `file_lloc_hard_gate` below.
[tool.livespec_dev_tooling]
# Phase-2 file_lloc FLIP (fleet-check-coverage epic livespec-i5ebqd). With this
# key true, `file_lloc` hard-gates this repo's WHOLE git-derived first-party-.py
# universe (>250 LLOC => error/exit 1) instead of WARN-only. Armed AFTER the
# footgun-guard decomposition (this epic's follow-up): `livespec_footgun_guard.py`
# was 263→264 LLOC (over the 250 hard ceiling), so it was GENUINELY split — its
# cohesive shell-tokenization + primary-checkout-edit sub-responsibilities moved
# to the sibling modules `livespec/hooks/_footgun_shell.py` +
# `livespec/hooks/_footgun_primary_checkout.py`, NOT shaved. Every file in the
# universe (the three hooks + the two new modules) is now well under the ceiling
# (verified: `check-file-lloc` exits 0 with the gate armed, zero files >250; all
# ≤200). This is a SEVERITY increase, never a bypass (per livespec
# .ai/ci-gate-discipline.md + the fleet-check-coverage golden rules). Placed
# directly under the header, above the other keys, per the fleet placement
# convention.
file_lloc_hard_gate = true
scenario_tiers = ["tests.e2e-cli", "tests.e2e", "tests.integration", "tests.consumer", "tests.prompts"]
# The source `.py` surface of this binding repo: the plugin-shipped Codex
# hooks (livespec/hooks/ — the footgun guard + the no-shadow-ledger hook).
# Prefixes are matched against repo-root-relative staged paths. The bare
# `dev-tooling/` directory is NOT a prefix — it carries only non-source
# artifacts (the family-standard git-hook scaffolds) that legitimately have
# no paired test, now that the structural check ships from the
# livespec-dev-tooling package rather than as a repo-local
# `dev-tooling/check_plugin_structure.py` (zs22.7.9.2).
source_tree_prefixes = [
    "livespec/hooks/",
]
tests_tree_prefix = "tests/"
mirror_pairings = [
    { source_tree = "livespec/hooks", test_tree = "tests/hooks" },
]
neutral_hook_body_path = "livespec/hooks/no_shadow_ledger.py"
subprocess_spawn_allowlist = [
    "tests/hooks/test_block_auto_memory.py",
    "tests/hooks/test_livespec_footgun_guard.py",
    "tests/hooks/test_no_shadow_ledger.py",
    "tests/hooks/test_shipped_hooks_install_shape.py",
]
# no_write_direct file-scope exemption. Two of the three hooks emit their
# payload on stdout as their documented I/O boundary: `no_shadow_ledger.py`
# (a Stop hook — `sys.stdout.write(warning + "\n")` for its `systemMessage`
# JSON) and `block_auto_memory.py` (a PreToolUse hook —
# `sys.stdout.write(_deny_payload(...) + "\n")` for its deny decision). Those
# stdout writes ARE each hook's I/O contract, exactly the "supervisor surface
# owns a documented stdout contract" case the `no_write_direct`
# `supervisor_entry_files` exemption exists for (analogous to core's
# `run_static.py` findings-JSON contract). Declaring them here is honest
# classification — not a bypass — and clears the newly-covered no_write_direct
# WARNs. `no_shadow_ledger.py`'s body is single-sourced BYTE-IDENTICALLY across
# both Drivers (livespec core contracts.md §"Driver-shipped hooks"), so its
# coverage is handled by config here, never by editing the shared body. (The
# footgun guard uses `print()`, not `sys.stdout.write`, so it needs no
# no_write_direct exemption.)
supervisor_entry_files = [
    "livespec/hooks/block_auto_memory.py",
    "livespec/hooks/codex_background_memory_audit.py",
    "livespec/hooks/no_shadow_ledger.py",
]
# The `file_lloc_hard_gate = true` arming flag lives directly under the
# `[tool.livespec_dev_tooling]` header above (fleet placement convention); see
# its comment there for the footgun-guard decomposition that made the flip safe.

# ---------------------------------------------------------------------------
# Coverage — hook bodies must be measured in-process at 100%.
# ---------------------------------------------------------------------------

[tool.coverage.run]
branch = true
source = ["livespec/hooks"]
omit = [
    "*/.venv/*",
    "*/site-packages/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
include = [
    "livespec/hooks/block_auto_memory.py",
    "livespec/hooks/codex_background_memory_audit.py",
    "livespec/hooks/livespec_footgun_guard.py",
    "livespec/hooks/no_shadow_ledger.py",
]
exclude_also = [
    "if __name__ == .__main__.:",
]
